[B] Fix summary box number alignment

--- a/app/assets/stylesheets/partials/_components_figures.scss
+++ b/app/assets/stylesheets/partials/_components_figures.scss
@@ -188,7 +188,6 @@
       font-weight: $thin;
       display: block;
       position: relative;
-      top: 50%;
       z-index: 10;
       font-size: 42px;
       color: $grayDarkest;
